--- a/index.html
+++ b/index.html
@@ -8,18 +8,14 @@
 	<meta name="keywords" content="porfolio, gamedev, webdev" />
 	<meta name="description" content="porfolio" />
 	<meta name="author" content="Alba Alonso" />
-	<meta http-equiv="refresh" content="30" />
+	<meta http-equiv="refresh" content="60" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 	 <!-- Google Fonts -->
   	<link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet">
 
-  	<!-- Bootstrap CSS File -->
-  	<link href="resources/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
   	<!-- Libraries CSS Files -->
   	<link href="resources/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
-  	<link href="resources/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
   	<link href="resources/lib/magnific-popup/magnific-popup.css" rel="stylesheet">
   	<link href="resources/lib/hover/hover.min.css" rel="stylesheet">
 
@@ -35,11 +31,11 @@
 
   <link rel="stylesheet" type="text/css" href="resources/css/themify-icons.css">
   <link rel="stylesheet" type="text/css" href="resources/css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="resources/vendor/animate/animate.css">
-  <link rel="stylesheet" type="text/css" href="resources/vendor/owl-carousel/owl.carousel.css">
-  <link rel="stylesheet" type="text/css" href="resources/vendor/perfect-scrollbar/css/perfect-scrollbar.css">
-  <link rel="stylesheet" type="text/css" href="resources/vendor/nice-select/css/nice-select.css">
-  <link rel="stylesheet" type="text/css" href="resources/vendor/fancybox/css/jquery.fancybox.min.css">
+  <link rel="stylesheet" type="text/css" href="resources/lib/animate/animate.css">
+  <link rel="stylesheet" type="text/css" href="resources/lib/owl-carousel/owl.carousel.css">
+  <link rel="stylesheet" type="text/css" href="resources/lib/perfect-scrollbar/css/perfect-scrollbar.css">
+  <link rel="stylesheet" type="text/css" href="resources/lib/nice-select/css/nice-select.css">
+  <link rel="stylesheet" type="text/css" href="resources/lib/fancybox/css/jquery.fancybox.min.css">
   <link rel="stylesheet" type="text/css" href="resources/css/virtual.css">
   <link rel="stylesheet" type="text/css" href="resources/css/minibar.virtual.css">
 
@@ -127,10 +123,9 @@
 
 <!-- start section header -->
   	<div id="header" class="home">
-
     <div class="container">
       	<div class="header-content">
-        	<h1>I'm <span class="typed"></span></h1>
+        	<h1>I'm <span class="typed"> <span class="typed-cursor"></span> </span></h1>
         	<p>progammer, web developer</p>
 
         	<ul class="list-unstyled list-social">
@@ -511,24 +506,19 @@
 <!-- JavaScript Libraries -->
   	<script src="resources/lib/jquery/jquery.min.js"></script>
   	<script src="resources/lib/jquery/jquery-migrate.min.js"></script>
-  	<script src="resources/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
   	<script src="resources/lib/typed/typed.js"></script>
-  	<script src="resources/lib/owlcarousel/owl.carousel.min.js"></script>
   	<script src="resources/lib/magnific-popup/magnific-popup.min.js"></script>
-  	<script src="resources/lib/isotope/isotope.pkgd.min.js"></script>
-
-
 
   <script src="resources/js/jquery-3.5.1.min.js"></script>
   <script src="resources/js/bootstrap.bundle.min.js"></script>
-  <script src="resources/vendor/owl-carousel/owl.carousel.min.js"></script>
-  <script src="resources/vendor/perfect-scrollbar/js/perfect-scrollbar.js"></script>
-  <script src="resources/vendor/isotope/isotope.pkgd.min.js"></script>
-  <script src="resources/vendor/nice-select/js/jquery.nice-select.min.js"></script>
-  <script src="resources/vendor/fancybox/js/jquery.fancybox.min.js"></script>
-  <script src="resources/vendor/wow/wow.min.js"></script>
-  <script src="resources/vendor/animateNumber/jquery.animateNumber.min.js"></script>
-  <script src="resources/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="resources/lib/owl-carousel/owl.carousel.min.js"></script>
+  <script src="resources/lib/perfect-scrollbar/js/perfect-scrollbar.js"></script>
+  <script src="resources/lib/isotope/isotope.pkgd.min.js"></script>
+  <script src="resources/lib/nice-select/js/jquery.nice-select.min.js"></script>
+  <script src="resources/lib/fancybox/js/jquery.fancybox.min.js"></script>
+  <script src="resources/lib/wow/wow.min.js"></script>
+  <script src="resources/lib/animateNumber/jquery.animateNumber.min.js"></script>
+  <script src="resources/lib/waypoints/jquery.waypoints.min.js"></script>
   <script src="resources/js/google-maps.js"></script>
   <script src="resources/js/minibar-virtual.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIA_zqjFMsJM_sxP9-6Pde5vVCTyJmUHM&callback=initMap"></script>
@@ -538,6 +528,6 @@
 	<script src="resources/contactform/contactform.js"></script>
 
 <!-- Template Main Javascript File -->
-  	<script src="js/main.js"></script>
+  	<script src="resources/js/main.js"></script>
 </body>
 </html>
