--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       	  	    	<div class="caption wow fadeInRight">
       	  	    	  	<h2 class="fg-dark">Alba Alonso</h2>
       	  	    	  	<p class="fg-theme fw-medium">GameDev & Web developer</p>
-      	  	    	  	<p>Passionate engine developer and tools engineer who loves to design and develop game-focused applications.</p>
+      	  	    	  	<p>Me apasiona el desarrollo de software y herramientas sobre todo enfocado al mundo de los videojuegos. Me motiva mucho desarrollar mis habilidades y crecer profesionalmente. Actualmente estudiando un grado superior en desarrollo de páginas web.</p>
       	  	    	  	<ul class="theme-list">
       	  	    	  	  	<li class="fg-dark"><b>Nacido:</b> Vitoria-Gasteiz, Spain</li>
       	  	    	  	  	<li class="fg-dark"><b>Reside:</b> Vitoria-Gasteiz, Spain</li>
@@ -144,15 +144,9 @@
       	  	 	<div class="col-md-6">
       	  	 	  	<h4 class="wow fadeInUp">Coding skills</h4>
       	  	 	  	<div class="progress-wrapper wow fadeInUp">
-      	  	 	  	 	<span class="caption">C</span>
-      	  	 	  	 	<div class="progress">
-      	  	 	  	    	<div class="progress-bar" role="progressbar" style="width: 80%;" 		aria-valuenow=	"75" aria-valuemin="0" aria-valuemax="100">80%</div>
-      	  	 	  	  	</div>
-      	  	 	  	</div>
-      	  	 	  	<div class="progress-wrapper wow fadeInUp">
-      	  	 	  	  	<span class="caption">C++</span>
+      	  	 	  	  	<span class="caption">C/C++</span>
       	  	 	  	  	<div class="progress">
-      	  	 	  	    	<div class="progress-bar" role="progressbar" style="width: 86%;" 		aria-valuenow=	"75" aria-valuemin="0" aria-valuemax="100">86%</div>
+      	  	 	  	    	<div class="progress-bar" role="progressbar" style="width: 76%;" 		aria-valuenow=	"75" aria-valuemin="0" aria-valuemax="100">76%</div>
       	  	 	  	  	</div>
       	  	 	  	</div>
       	  	 	  	<div class="progress-wrapper wow fadeInUp">
@@ -167,23 +161,35 @@
       	  	 	  	  	  	<div class="progress-bar" role="progressbar" style="width: 30%;" 		aria-valuenow=	"75" aria-valuemin="0" aria-valuemax="100">30%</div>
       	  	 	  	  	</div>
       	  	 	  	</div>
+                  <div class="progress-wrapper wow fadeInUp">
+                    <span class="caption">OpenGL</span>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 45%;"    aria-valuenow=  "75" aria-valuemin="0" aria-valuemax="100">15%</div>
+                      </div>
+                  </div>
       	  	 	</div>
       	  	 	<div class="col-md-6">
-      	  	 	  	<h4 class="wow fadeInUp">Design Skills</h4>
+      	  	 	  	<h4 class="wow fadeInUp">Other Skills</h4>
       	  	 	  	<div class="progress-wrapper wow fadeInUp">
-      	  	 	  	  	<span class="caption">UI / UX Design</span>
+      	  	 	  	  	<span class="caption">Autodesk 3ds Max</span>
       	  	 	  	  	<div class="progress">
-      	  	 	  	  	  	<div class="progress-bar" role="progressbar" style="width: 92%;" 			aria-valuenow=	"75" aria-valuemin="0" aria-valuemax="100">92%</div	>
+      	  	 	  	  	  	<div class="progress-bar" role="progressbar" style="width: 25%;" 			aria-valuenow=	"75" aria-valuemin="0" aria-valuemax="100">25%</div	>
       	  	 	  	  	</div>
       	  	 	  	</div>
       	  	 	  	<div class="progress-wrapper wow fadeInUp">
-      	  	 	  	  	<span class="caption">Web Design</span>
+      	  	 	  	  	<span class="caption">Programas de uso ofimatico</span>
       	  	 	  	  	<div class="progress">
-      	  	 	  	  	  	<div class="progress-bar" role="progressbar" style="width: 99%;" 			aria-valuenow=	"75" aria-valuemin="0" aria-valuemax="100">99%</div	>
+      	  	 	  	  	  	<div class="progress-bar" role="progressbar" style="width: 95%;" 			aria-valuenow=	"75" aria-valuemin="0" aria-valuemax="100">95%</div	>
       	  	 	  	  	</div>
       	  	 	  	</div>
+                  <div class="progress-wrapper wow fadeInUp">
+                    <span class="caption">LaTex</span>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 70%;"    aria-valuenow=  "75" aria-valuemin="0" aria-valuemax="100">70%</div>
+                      </div>
+                  </div>
       	  	 	  	<div class="progress-wrapper wow fadeInUp">
-      	  	 	  	  	<span class="caption">Logo Design</span>
+      	  	 	  	  	<span class="caption">Diseño de videojuegos</span>
       	  	 	  	  	<div class="progress">
       	  	 	  	    	<div class="progress-bar" role="progressbar" style="width: 79%;" 		aria-valuenow=	"75" aria-valuemin="0" aria-valuemax="100">79%</div>
       	  	 	  	  	</div>
@@ -197,7 +203,7 @@
       	<div class="container pt-5">
       	  <div class="row">
       	    <div class="col-md-6 wow fadeInRight">
-      	      <h2 class="fg-dark">Education</h2>
+      	      <h2 class="fg-dark">Educacion y formacion</h2>
       	      <ul class="timeline mt-4 pr-md-5">
       	        <li>
       	          <div class="title">2021 - Current</div>
@@ -218,10 +224,10 @@
       	          </div>
       	        </li>
       	        <li>
-      	          <div class="title">2008</div>
+      	          <div class="title">2017</div>
       	          <div class="details">
-      	            <h5>Specialize of course</h5>
-      	            <small class="fg-theme">University of Study</small>
+      	            <h5>Bachillerato cientifico-tecnico</h5>
+      	            <small class="fg-theme">San Viator, Vitoria-Gasteiz</small>
       	            <p>There are many variations of passages of Lorem Ipsum available, but the 	majority have suffered</p>
       	          </div>
       	        </li>
@@ -252,7 +258,7 @@
       	          <div class="title">2014</div>
       	          <div class="details">
       	            <h5>Plugins/Mods para minecraft y Java II</h5>
-      	            <small class="fg-theme">CampTecnologico, Vitoria</small>
+      	            <small class="fg-theme">CampTecnologico, Vitoria-Gasteiz</small>
       	            <p>There are many variations of passages of Lorem Ipsum available, but the 	majority have suffered</p>
       	          </div>
       	        </li>
@@ -260,7 +266,7 @@
       	          <div class="title">2014</div>
       	          <div class="details">
       	            <h5>Plugins/Mods para minecraft y Java I</h5>
-                    <small class="fg-theme">CampTecnologico, Vitoria</small>
+                    <small class="fg-theme">CampTecnologico, Vitoria-Gasteiz</small>
       	            <p>There are many variations of passages of Lorem Ipsum available, but the 	majority have suffered</p>
       	          </div>
       	        </li>
@@ -268,7 +274,7 @@
                   <div class="title">2013</div>
                   <div class="details">
                     <h5>Arduino</h5>
-                    <small class="fg-theme">CampTecnologico, Vitoria</small>
+                    <small class="fg-theme">CampTecnologico, Vitoria-Gasteiz</small>
                     <p>There are many variations of passages of Lorem Ipsum available, but the  majority have suffered</p>
                   </div>
                 </li>
@@ -284,7 +290,7 @@
                   <div class="title">2012</div>
                   <div class="details">
                     <h5>LEGO robotica I</h5>
-                    <small class="fg-theme">CampTecnologico, Vitoria</small>
+                    <small class="fg-theme">CampTecnologico, Vitoria-Gasteiz</small>
                     <p>There are many variations of passages of Lorem Ipsum available, but the  majority have suffered</p>
                   </div>
                 </li>
@@ -292,7 +298,7 @@
                   <div class="title">2012</div>
                   <div class="details">
                     <h5>Creaccion de Videojuegos con Scrach</h5>
-                    <small class="fg-theme">CampTecnologico, Vitoria</small>
+                    <small class="fg-theme">CampTecnologico, Vitoria-Gasteiz</small>
                     <p>There are many variations of passages of Lorem Ipsum available, but the  majority have suffered</p>
                   </div>
                 </li>
@@ -304,7 +310,6 @@
       	<!-- End resume -->
     </div> 
     <!-- End page about me-->
-
 
 
 <!-- Section services -->
