--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       	          <div class="title">2017 - 2021</div>
       	          <div class="details">
       	            <h5>Ingenieria informatica en simulacion interactiva en tiempo real</h5>
-      	            <small class="fg-theme">Digipen, Bilbao</small>
+      	            <small class="fg-theme">DigiPen Institute of Technology Europe, Bilbao</small>
                     <p>Crea simulaciones interactivas en tiempo real y complejos gráficos por ordenador.</p>
                     <p>Adquiere los conocimientos y habilidades para producir programas de software de alta complejidad.</p>
       	            <p>Aprende utilizando el lenguaje C++ a hacer desde cero el motor del juego, la inteligencia artificial, las físicas y el motor gráfico.</p>
@@ -228,21 +228,19 @@
       	          <div class="details">
       	            <h5>Bachillerato cientifico-tecnico</h5>
       	            <small class="fg-theme">San Viator, Vitoria-Gasteiz</small>
-      	            <p>There are many variations of passages of Lorem Ipsum available, but the 	majority have suffered</p>
       	          </div>
       	        </li>
       	      </ul>
       	    </div>
       	    
       	    <div class="col-md-6 wow fadeInRight" data-wow-delay="200ms">
-      	      <h2 class="fg-dark">Cursos</h2>
+      	      <h2 class="fg-dark">Formacion no reglada(Cursos)</h2>
       	      <ul class="timeline mt-4 pr-md-5">
       	        <li>
       	          <div class="title">2016</div>
       	          <div class="details">
       	            <h5>Titulo manipulacion de alimentos</h5>
-      	            <small class="fg-theme">University of Study</small>
-      	            <p>There are many variations of passages of Lorem Ipsum available, but the 	majority have suffered</p>
+      	            <small class="fg-theme">Laboratorio Araba S.A (ARLAB)</small>
       	          </div>
       	        </li>
                 <li>
@@ -250,7 +248,7 @@
                   <div class="details">
                     <h5>Mooc Hacking Ético</h5>
                     <small class="fg-theme">Universidad de mondragon</small>
-                    <p>curso abierto masivo y en línea en el que podrás conocer técnicas básicas y avanzadas de hacking, la dimensión ética del hacker y otras cuestiones relevantes sobre seguridad informática, en un contexto de aprendizaje a través del juego simulando un contexto real.</p>
+                    <p>Curso abierto masivo y en línea en el que se conocen técnicas básicas y avanzadas de hacking, la dimensión ética del hacker y otras cuestiones relevantes sobre seguridad informática, en un contexto de aprendizaje a través del juego simulando un contexto real.</p>
                     <img src="resources/images/badges.jpg" width="364" height="162" alt="bagges earned during the mooc: participation, defense and atack">
                   </div>
                 </li>
@@ -259,7 +257,6 @@
       	          <div class="details">
       	            <h5>Plugins/Mods para minecraft y Java II</h5>
       	            <small class="fg-theme">CampTecnologico, Vitoria-Gasteiz</small>
-      	            <p>There are many variations of passages of Lorem Ipsum available, but the 	majority have suffered</p>
       	          </div>
       	        </li>
       	        <li>
@@ -267,7 +264,6 @@
       	          <div class="details">
       	            <h5>Plugins/Mods para minecraft y Java I</h5>
                     <small class="fg-theme">CampTecnologico, Vitoria-Gasteiz</small>
-      	            <p>There are many variations of passages of Lorem Ipsum available, but the 	majority have suffered</p>
       	          </div>
       	        </li>
                 <li>
@@ -275,7 +271,6 @@
                   <div class="details">
                     <h5>Arduino</h5>
                     <small class="fg-theme">CampTecnologico, Vitoria-Gasteiz</small>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the  majority have suffered</p>
                   </div>
                 </li>
                 <li>
@@ -283,7 +278,6 @@
                   <div class="details">
                     <h5>LEGO robotica II</h5>
                     <small class="fg-theme">CampTecnologico, Vitoria</small>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the  majority have suffered</p>
                   </div>
                 </li>
                 <li>
@@ -291,7 +285,6 @@
                   <div class="details">
                     <h5>LEGO robotica I</h5>
                     <small class="fg-theme">CampTecnologico, Vitoria-Gasteiz</small>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the  majority have suffered</p>
                   </div>
                 </li>
                 <li>
@@ -299,7 +292,6 @@
                   <div class="details">
                     <h5>Creaccion de Videojuegos con Scrach</h5>
                     <small class="fg-theme">CampTecnologico, Vitoria-Gasteiz</small>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the  majority have suffered</p>
                   </div>
                 </li>
       	      </ul>
@@ -494,6 +486,47 @@
     </div> 
 <!-- End page blog -->
 
+<!-- Page Contact -->
+    <div class="vg-page page-contact" id="contact">
+      <h1 class="text-center fg-dark wow fadeInUp">Contact</h1>
+      <div class="container-fluid">
+        <div class="row py-5">
+          <div class="col-lg-6">
+            <div class="contact-contact">
+
+              <h2 class="mb-30">GET IN TOUCH</h2>
+
+              <ul class="contact-details">
+                <li><span>23 Main, Street</span></li>
+                <li><span>New York, United States</span></li>
+                <li><span>+88 01912704287</span></li>
+                <li><span>example@example.com</span></li>
+              </ul>
+
+            </div>
+          </div>
+          <div class="col-lg-5">
+            <form class="vg-contact-form">
+              <div class="form-row">
+                <div class="col-12 wow fadeInUp">
+                  <input class="form-control" type="text" name="Name" placeholder="Your Name">
+                </div>
+                <div class="col-6 wow fadeInUp">
+                  <input class="form-control" type="text" name="Email" placeholder="Email Address">
+                </div>
+                <div class="col-6 wow fadeInUp">
+                  <input class="form-control" type="text" name="Subject" placeholder="Subject">
+                </div>
+                <div class="col-12 wow fadeInUp">
+                  <textarea class="form-control" name="Message" rows="6" placeholder="Enter message here.."></textarea>
+                </div>
+                <button type="submit" class="btn btn-theme mt-3 wow fadeInUp ml-1">Send Message</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div> <!-- End page contact -->
 
 <!-- Section footer -->
   <div id="footer" class="text-center">
