--- a/index.html
+++ b/index.html
@@ -45,28 +45,26 @@
   <!-- Minibar -->
   <div class="minibar">
     <div class="header">
-      <div class="brand">
-        
-      </div>
+      <div class="brand"> </div>
     </div>
     <div class="content">
       <ul class="main-menu">
         <li class="menu-item active">
           <a href="#header" class="menu-link">
             <span class="icon ti-home"></span>
-            <span class="caption">Home</span>
+            <span class="caption">Portada</span>
           </a>
         </li>
         <li class="menu-item">
           <a href="#about" class="menu-link">
             <span class="icon ti-user"></span>
-            <span class="caption">About</span>
+            <span class="caption">Sobre Mi</span>
           </a>
         </li>
         <li class="menu-item">
           <a href="#services" class="menu-link">
             <span class="icon ti-file"></span>
-            <span class="caption">Service</span>
+            <span class="caption">Skills</span>
           </a>
         </li>
         <li class="menu-item">
@@ -84,7 +82,7 @@
         <li class="menu-item">
           <a href="#contact" class="menu-link">
             <span class="icon ti-location-pin"></span>
-            <span class="caption">Contact</span>
+            <span class="caption">Contacto</span>
           </a>
         </li>
       </ul>
@@ -308,7 +306,7 @@
 <!-- Section services -->
   <div id="services">
     <div class="container">
-
+      <h1 class="text-center wow fadeInUp">Services</h1>
         <div class="services-carousel owl-theme">
 
           <div class="services-block">
@@ -367,78 +365,89 @@
         <h1 class="text-center fw-normal wow fadeInUp">See my work</h1>
         <div class="filterable-button py-3 wow fadeInUp" data-toggle="selected">
           <button class="btn btn-theme-outline selected" data-filter="*">All</button>
-          <button class="btn btn-theme-outline" data-filter=".apps">Apps</button>
-          <button class="btn btn-theme-outline" data-filter=".template">Template</button>
-          <button class="btn btn-theme-outline" data-filter=".ios">IOS</button>
-          <button class="btn btn-theme-outline" data-filter=".ui-ux">UI/UX</button>
-          <button class="btn btn-theme-outline" data-filter=".graphic">Graphic</button>
-          <button class="btn btn-theme-outline" data-filter=".wireframes">Wireframes</button>
+          <button class="btn btn-theme-outline" data-filter=".game">Juegos</button>
+          <button class="btn btn-theme-outline" data-filter=".uni">DigiPen</button>
+          <button class="btn btn-theme-outline" data-filter=".jam">GameJam</button>
+          <button class="btn btn-theme-outline" data-filter=".personal">Proyectos personales</button>
         </div>
 
         <div class="gridder my-3">
-          <div class="grid-item apps wow zoomIn">
-            <div class="img-place" data-src="resources\images\portfolio\work-1.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Travel, Discovery</p>">
+          <div class="grid-item game uni wow zoomIn">
+            <div class="img-place" data-src="resources\images\portfolio\work-1.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Mecha Invaders (2020-2021)</h5> <p>Juego multijugador local 3D</p>">
               <img src="resources/images/portfolio/work-1.jpg" alt="">
               <div class="img-caption">
-                <h5 class="fg-theme">Mobile Travel App</h5>
-                <p>Travel, Discovery</p>
+                <h5 class="fg-theme">Mecha Invaders (2020-2021)</h5>
+                <p>Juego multijugador local 3D</p>
               </div>
             </div>
           </div>
-          <div class="grid-item template wireframes wow zoomIn">
-            <div class="img-place" data-src="resources\images\portfolio\work-2.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
+          <div class="grid-item game uni wow zoomIn">
+            <div class="img-place" data-src="resources\images\portfolio\work-2.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Gooh (2018-2019)</h5> <p>Juego Platformer/Shooter 2D </p>">
               <img src="resources/images/portfolio/work-2.jpg" alt="">
               <div class="img-caption">
-                <h5 class="fg-theme">Music App</h5>
-                <p>Musics</p>
+                <h5 class="fg-theme">Gooh (2018-2019)</h5>
+                <p>Juego Platformer/Shooter 2D </p>
               </div>
             </div>
           </div>
-          <div class="grid-item apps ios wow zoomIn">
-            <div class="img-place" data-src="resources\images\portfolio\work-3.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Gaming Dashboard</h5> <p>Games, Streaming</p>">
+          <div class="grid-item game jam wow zoomIn">
+            <div class="img-place" data-src="resources\images\portfolio\work-3.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Duck's Revenge (2018)</h5> <p>Global Gam Jam Bilbao</p>">
               <img src="resources/images/portfolio/work-3.jpg" alt="">
               <div class="img-caption">
-                <h5 class="fg-theme">Gaming Dashboard</h5>
-                <p>Games, Streaming</p>
+                <h5 class="fg-theme">Duck's Revenge (2018)</h5>
+                <p>Global Gam Jam Bilbao</p>
               </div>
             </div>
           </div>
-          <div class="grid-item graphic ui-ux wow zoomIn">
-            <div class="img-place" data-src="resources\images\portfolio\work-4.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Drugs Delivery App</h5> <p>Health, Drugs</p>">
+          <div class="grid-item game uni wow zoomIn">
+            <div class="img-place" data-src="resources\images\portfolio\work-4.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Farm at War (2018)</h5> <p>Minujuegos 2D</p>">
               <img src="resources/images/portfolio/work-4.jpg" alt="">
               <div class="img-caption">
-                <h5 class="fg-theme">Drugs Delivery App</h5>
-                <p>Health, Drugs</p>
+                <h5 class="fg-theme">Farm at War (2018)</h5>
+                <p>Minujuegos 2D</p>
               </div>
             </div>
           </div>
-          <div class="grid-item apps ios wow zoomIn">
-            <div class="img-place" data-src="resources\images\portfolio\work-5.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Musics Discover</h5> <p>Musics, Dashboard</p>">
+          <div class="grid-item game uni wow zoomIn">
+            <div class="img-place" data-src="resources\images\portfolio\work-5.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Dream Catcher (2017)</h5> <p>Juego en ZeroEngine</p>">
               <img src="resources/images/portfolio/work-5.jpg" alt="">
               <div class="img-caption">
-                <h5 class="fg-theme">Musics Discover</h5>
-                <p>Musics, Dashboard</p>
+                <h5 class="fg-theme">Dream Catcher (2017)</h5>
+                <p>Juego en ZeroEngine</p>
               </div>
             </div>
           </div>
-          <div class="grid-item graphic ui-ux wireframes wow zoomIn">
-            <div class="img-place" data-src="resources\images\portfolio\work-6.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Game Streaming</h5> <p>Games, Streaming</p>">
+          <div class="grid-item personal wow zoomIn">
+            <div class="img-place" data-src="resources\images\portfolio\work-6.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Verlet point-mass system (2018)</h5> <p>Simulacion de fisicas</p>">
               <img src="resources/images/portfolio/work-6.jpg" alt="">
               <div class="img-caption">
-                <h5 class="fg-theme">Game Streaming</h5>
-                <p>Games, Streaming</p>
+                <h5 class="fg-theme">Verlet point-mass system (2018)</h5>
+                <p>Simulacion de fisicas</p>
+              </div>
+            </div>
+          </div>
+          <div class="grid-item personal wow zoomIn">
+            <div class="img-place" data-src="resources\images\portfolio\work-7.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Iluminacion 2D por Raycastig (2017)</h5> <p>en ZeroEngine</p>">
+              <img src="resources/images/portfolio/work-7.jpg" alt="">
+              <div class="img-caption">
+                <h5 class="fg-theme">Iluminacion 2D por Raycastig (2017)</h5>
+                <p>en ZeroEngine</p>
               </div>
             </div>
           </div>
         </div> <!-- End gridder -->
+        <!--
         <div class="text-center wow fadeInUp">
           <a href="javascript:void(0)" class="btn btn-theme">Load More</a>
         </div>
+        -->
       </div>
     </div> 
 <!-- End Portfolio page -->
 
+
 <!-- Page Blog -->
+ <!--
     <div class="vg-page page-blog" id="blog">
       <h1 class="text-center fg-dark wow fadeInUp">Latest Post</h1>
       <div class="container">
@@ -485,11 +494,12 @@
         </div>
       </div>
     </div> 
+-->
 <!-- End page blog -->
 
 <!-- Page Contact -->
   <div class="vg-page page-contact" id="contact">
-      <h1 class="text-center fg-dark wow fadeInUp">Contact</h1>
+      <h1 class="text-center fg-dark wow fadeInUp">Contacto</h1>
       <div class="container pt-5">
         
           <div class="row">
