coment some data

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       	  	    	  	  	<li class="fg-dark"><b>Nacido:</b> Vitoria-Gasteiz, Spain</li>
       	  	    	  	  	<li class="fg-dark"><b>Reside:</b> Vitoria-Gasteiz, Spain</li>
       	  	    	  	  	<li class="fg-dark"><b>Edad:</b> 23</li>
-      	  	    	  	  	<li class="fg-dark"><b>Genero:</b> Otro</li>
+      	  	    	  	  	<!-- <li class="fg-dark"><b>Genero:</b> Otro</li>  -->
       	  	    	  	</ul>
       	  	    	  	<button class="btn btn-theme btn-rounded">Descargar CV</button>
       	  	    	</div>
@@ -304,6 +304,7 @@
 
 
 <!-- Section services -->
+<!--
   <div id="services">
     <div class="container">
       <h1 class="text-center wow fadeInUp">Services</h1>
@@ -353,6 +354,7 @@
     </div>
 
   </div>
+-->
   <!-- end section services -->
 
 
@@ -509,7 +511,7 @@
               <ul class="contact-details">
                 <li><span>C/ Estella Lizara 22, 01010</span></li>
                 <li><span>Vitoria-Gasteiz, Espana</span></li>
-                <li><span>+34 657 616 330</span></li>
+                <!-- <li><span>+34 657 616 330</span></li> -->
                 <li><span>alonso.marmany@gmail.com</span></li>
               </ul>
 
